#12151 - Fix date picker  overlapped in 3D map settings panel (#12164)

--- a/web/client/themes/default/less/settings.less
+++ b/web/client/themes/default/less/settings.less
@@ -35,3 +35,9 @@
         }
     }
 }
+
+.fade.in.modal{
+    &.settings-panel-container {
+        z-index: 3500;
+    }
+}
